Arreglo del background y cambios de nombre de la institución

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
   --color-primary-dark: #9f111b;
   --color-primary: #b11623;
   --color-primary-light: #C62828;
+  --color-secondary: #292c37;
   --color-text-card: #1F2937;
   --color-text-secondary: #292c37;
   --color-muted: #6B7280;
